[gd_scene load_steps=2 format=2]

[ext_resource path="res://EscapeMenu.gd" type="Script" id=1]

[node name="EscapeMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1909.0
margin_bottom = 1062.0
rect_pivot_offset = Vector2( 706, 698 )

[node name="Resume" type="Button" parent="."]
margin_left = 713.0
margin_top = 388.0
margin_right = 1103.0
margin_bottom = 529.0
text = "Resume"

[node name="Options" type="Button" parent="."]
margin_left = 713.0
margin_top = 570.0
margin_right = 1103.0
margin_bottom = 711.0
text = "Options"

[node name="QuitGame" type="Button" parent="."]
margin_left = 713.0
margin_top = 751.0
margin_right = 1103.0
margin_bottom = 892.0
text = "Quit"

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_QuitGame_pressed"]
